--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
-ul :nth-child(n + 3) {
+ul :nth-child(3) {
+    color: red;
+}
+
+ul :nth-child(4) {
     color: red;
 }
 
@@ -16,6 +20,10 @@ div :nth-child(1) {
     font-style: italic;
     color: black;
 }
+
+
+
+
 
 button {
     border-radius: 20px;
