--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* LISTS */
 ul :nth-child(3) {
     color: red;
 }
@@ -10,21 +11,33 @@ ol :nth-child(2n) {
     font-size: 24px;
 }
 
+
+/* 3 DIVS */
 div {
     height: 100px;
     width: 100px;
     background-color: red;
+    color: white;
 }
+
 
 div :nth-child(1) {
     font-style: italic;
     color: black;
 }
 
+div:first-of-type{
+    color: black;
+}
+
+div:last-of-type{
+    color: black;
+}
 
 
 
 
+/* BUTTON */
 button {
     border-radius: 20px;
     height: 50px;
